fix: add radius to slideshow & collapse, change slideshow previous & next icons

--- a/src/css/components/Collapse/style.css
+++ b/src/css/components/Collapse/style.css
@@ -16,6 +16,7 @@ input[type="reset"] {
   font: inherit;
   cursor: pointer;
   outline: inherit;
+  border-radius: 10px;
 }
 
 .collapse_button {
