--- a/src/css/components/Slideshow/style.css
+++ b/src/css/components/Slideshow/style.css
@@ -4,6 +4,7 @@
   overflow: hidden;
   position: relative;
   margin: 0 auto;
+  border-radius: 25px;
 }
 
 .slideshow_picture {
